Ultimos ajustes al 100%

--- a/src/app/features/portfolio/sections/contact/contact.html
+++ b/src/app/features/portfolio/sections/contact/contact.html
@@ -1,4 +1,4 @@
-<div class="container min-h-screen mx-auto px-4 sm:px-6 lg:px-8 py-18 sm:py-6 flex items-center justify-center">
+<div class="container min-h-screen mx-auto px-4 sm:px-6 lg:px-8 pb-4 sm:py-6 flex items-center justify-center">
   <div class="w-full max-w-5xl">
     <!-- Header -->
     <div class="text-center mb-10 md:mb-12 px-2">
