--- a/src/app/features/portfolio/sections/hero/hero.html
+++ b/src/app/features/portfolio/sections/hero/hero.html
@@ -15,10 +15,12 @@
       <typed-text />
     </div>
 
-    <p class="mx-auto max-w-3xl text-sm sm:text-base md:text-lg lg:text-xl text-muted-foreground p-4 sm:p-6 md:p-8 lg:p-10">
+    <p
+      class="mx-auto max-w-3xl text-sm sm:text-base md:text-lg lg:text-xl text-muted-foreground p-4 sm:p-6 md:p-8 lg:p-10">
       {{ 'hero.desc' | t }}
     </p>
-    <div class="mb-8 flex flex-row items-center justify-center gap-4 opacity-0 animate-fade-in-up animation-delay-600">
+    <div
+      class="mb-8 flex flex-row flex-wrap items-center justify-center gap-4 opacity-0 animate-fade-in-up animation-delay-600">
       <a href="#proyectos" class="inline-flex items-center rounded-lg bg-primary sm:text-lg text-xs
                    px-3 py-2 sm:px-4 sm:py-3 md:px-6 md:py-4 gap-1
                    font-semibold  shadow-lg
