--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -1,11 +1,11 @@
-<footer class="py-8 border-t border-border">
+<footer class="sm:py-8 py-4 border-t border-border">
   <div class="container mx-auto px-4">
     <div class="flex flex-col md:flex-row items-center justify-between gap-4">
       <a href="#" class="font-mono text-lg font-bold text-primary">&lt;MV /&gt;</a>
 
-      <div class="flex items-center gap-1 text-sm text-muted-foreground">
-        <span>© {{ currentYear() }} Mauricio Vereau.</span>
-        <span>{{ 'footer.rights' | t}}</span>
+      <div class="flex items-center gap-1 text-xs sm:text-sm text-muted-foreground">
+        <span>© {{ currentYear() }} Mauricio Vereau. {{ 'footer.rights' | t}}</span>
+        <span></span>
       </div>
 
       <div class="flex items-center gap-4">
