--- a/src/app/features/portfolio/sections/hero/hero.html
+++ b/src/app/features/portfolio/sections/hero/hero.html
@@ -21,7 +21,7 @@
     </p>
     <div
       class="mb-8 flex flex-row flex-wrap items-center justify-center gap-4 opacity-0 animate-fade-in-up animation-delay-600">
-      <a href="#proyectos" class="inline-flex items-center rounded-lg bg-primary sm:text-lg text-xs
+      <a href="#projects" class="inline-flex items-center rounded-lg bg-primary sm:text-lg text-xs
                    px-3 py-2 sm:px-4 sm:py-3 md:px-6 md:py-4 gap-1
                    font-semibold  shadow-lg
                    transition-all hover:bg-primary/90 hover:shadow-xl
