--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,7 +13,7 @@
   </div>
 
   <app-navbar></app-navbar>
-  <main class="relative z-10">
+  <main class="relative z-10" role="main">
     <router-outlet />
   </main>
   <app-footer></app-footer>
