--- a/src/app/features/portfolio/sections/about/about.html
+++ b/src/app/features/portfolio/sections/about/about.html
@@ -34,13 +34,13 @@
           <p class="text-sm text-muted-foreground mb-4 font-mono">{{ 'about.subtitle' | t }}</p>
           <div class="flex flex-nowrap items-center gap-6 overflow-x-auto">
             <div class="h-10 w-28 sm:h-12 sm:w-32 md:h-16 md:w-40 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300">
-              <img src="assets/img/empresas/NTT-Data.svg" alt="NTT DATA" class="h-full w-full object-contain" />
+              <img src="assets/img/empresas/NTT-Data.svg" alt="NTT DATA" class="h-full w-full object-contain" loading="lazy" />
             </div>
             <div class="h-28 w-24 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300">
-              <img src="assets/img/empresas/caja-trujillo-1.png" alt="Caja Trujillo" class="h-full w-full object-contain" />
+              <img src="assets/img/empresas/caja-trujillo-1.png" alt="Caja Trujillo" class="h-full w-full object-contain" loading="lazy" />
             </div>
             <div class="h-10 w-28 sm:h-12 sm:w-32 md:h-16 md:w-40 grayscale opacity-60 hover:grayscale-0 hover:opacity-100 transition-all duration-300">
-              <img src="assets/img/empresas/neurocom.png" alt="Neurocom" class="h-full w-full object-contain" />
+              <img src="assets/img/empresas/neurocom.png" alt="Neurocom" class="h-full w-full object-contain" loading="lazy" />
             </div>
           </div>
         </div>
